--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "chokidar": "^3.5.2"
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "chokidar": "^3.5.2",
+    "eslint": "^7.32.0"
   }
 }
