--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "package-arm64": "echo building linux win macos package... && rm -rf output && rm -rf build && rm -rf debug && tsc --outDir build && echo building linux... && pkg . --compress Gzip -t node14-linux-arm64 -o output/MicroBootApp_linux_arm64 && echo building windows... && pkg . --compress Gzip -t node14-win-arm64 -o output/MicroBootApp_win_arm64 && echo building darwin... && pkg . --compress Gzip -t node14-macos-arm64 -o output/MicroBootApp_macos_arm64 && rm -rf build && rm -rf debug",
-    "package": "echo building linux win macos package... && rm -rf output && rm -rf build && rm -rf debug && tsc --outDir build && echo building linux... && pkg . --compress Gzip -t node14-linux-x64 -o output/MicroBootApp_linux_x64 && echo building windows... && pkg . --compress Gzip -t node14-win-x64 -o output/MicroBootApp_win_x64 && echo building darwin... && pkg . --compress Gzip -t node14-macos-x64 -o output/MicroBootApp_macos_x64 && rm -rf build && rm -rf debug",
+    "package-arm64": "echo building linux win macos package... && rm -rf output && rm -rf build && rm -rf debug && tsc --outDir build && cp -r ./assets ./build/ && echo building linux... && pkg . --compress Gzip -t node14-linux-arm64 -o output/MicroBootApp_linux_arm64 && echo building windows... && pkg . --compress Gzip -t node14-win-arm64 -o output/MicroBootApp_win_arm64 && echo building darwin... && pkg . --compress Gzip -t node14-macos-arm64 -o output/MicroBootApp_macos_arm64 && rm -rf build && rm -rf debug",
+    "package": "echo building linux win macos package... && rm -rf output && rm -rf build && rm -rf debug && tsc --outDir build && cp -r ./assets ./build/ && echo building linux... && pkg . --compress Gzip -t node14-linux-x64 -o output/MicroBootApp_linux_x64 && echo building windows... && pkg . --compress Gzip -t node14-win-x64 -o output/MicroBootApp_win_x64 && echo building darwin... && pkg . --compress Gzip -t node14-macos-x64 -o output/MicroBootApp_macos_x64 && rm -rf build && rm -rf debug",
     "dev": "node ./dev/dev-cli-service.js",
     "lint": "eslint .",
     "fix": "eslint . --fix"
@@ -20,13 +20,16 @@
   },
   "dependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/ejs": "^3.1.0",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.3",
     "@types/koa-router": "^7.4.4",
     "@types/koa-session": "^5.10.4",
     "@types/mysql": "^2.15.19",
     "chalk": "^4.1.2",
+    "ejs": "^3.1.6",
     "koa": "^2.13.1",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
     "koa-session": "^6.2.0",
